--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,15 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+amazon:
+  service: S3
+  access_key_id: <%= ENV['AKIAVZH4SBSY4KAJPSCE'] %>
+  secret_access_key: <%= ENV['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'] %>
+  region: <%= ENV['us-east-1'] %>
+  bucket: <%= ENV['bucketeer-96376a38-a62d-45f1-bc08-9ab47789bd76'] %>
+
+
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
