--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore storage keys
+/config/storage.yml
+
+
 /public/packs
 /public/packs-test
 /node_modules
